    * ADD: adding Yahoo Widgets NetCast item by default for EU models
    * ADD: if there's now 'ywe' dir on 'addon' partition then set Yahoo Widgets Engine dir to /mnt/usb1/Drive1/OpenLGTV_BCM/ywe
    * ADD: RELEASE is started now in tmux, so it's possible to control RELEASE over telnet or SSH, too
    * ADD: /mnt/user/cfg/settings file with configuration variables for OpenLGTV BCM scripts
    * ADD: possibility to enable all available NetCast services (disabled by default, be careful as it sorts all of them alphabetically and some do not have it's icons)
    * ADD: add OpenLGTV BCM WebUI NetCast option as first service - WebUI is still TODO [not UI available yet but sample testing code from nicola_12345 changed to CGI script]
    * ADD: add support for ~/.ssh dir (linked to /mnt/user/.ssh) - for example for autorised_keys file to be able to login via SSH using public key authorisation, even without password
    * ADD: support for /mnt/user/cfg/settings file updates after version upgrades
    * ADD: at first time installation make backup of writable partitions - useful for Yahoo Widgets backup before changing to Samsung platform
    * ADD: development versions (devel, alpha, beta) are taking more logs and info from current firmware and hardware at first time installation procedure, give there to us for making better support of yours model
    * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
    * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
    * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
    * CHANGE: move backup, flashed file and logs to 'flashed' subdir after successful flash
    * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation