@@ -1,42 +1,49 @@
 #!/bin/sh
-if [ -d "/mnt/usb1/Drive1/OpenLGTV_BCM" ]
+if [ -d "/mnt/usb2/Drive1/OpenLGTV_BCM" ]
+then
+    export OpenLGTV_BCM_USB=/mnt/usb2/Drive1/OpenLGTV_BCM
+else
+    export OpenLGTV_BCM_USB=/mnt/usb1/Drive1/OpenLGTV_BCM
+fi
+
+if [ -d "$OpenLGTV_BCM_USB" ]
 then
     echo "OpenLGTV_BCM-INFO: found OpenLGTV_BCM dir on mounted USB storage device" | tee -a /var/log/OpenLGTV_BCM.log
     cur_dir=`pwd`
-    if [ -d "/mnt/usb1/Drive1/OpenLGTV_BCM/upgrade" ]
+    if [ -d "$OpenLGTV_BCM_USB/upgrade" ]
     then
-	#if [ -f "/mnt/usb1/Drive1/OpenLGTV_BCM/upgrade/OpenLGTV_BCM-v*.sqf" ]
+	#if [ -f "$OpenLGTV_BCM_USB/upgrade/OpenLGTV_BCM-v*.sqf" ]
 	#then
-	    echo "OpenLGTV_BCM-INFO: found /mnt/usb1/Drive1/OpenLGTV_BCM/upgrade/ dir - trying to run OpenLGTV BCM upgrade..." | tee -a /var/log/OpenLGTV_BCM.log
-	    sqf_file_count=`ls -al /mnt/usb1/Drive1/OpenLGTV_BCM/upgrade/OpenLGTV_BCM-v*.sqf | wc -l`
+	    echo "OpenLGTV_BCM-INFO: found $OpenLGTV_BCM_USB/upgrade/ dir - trying to run OpenLGTV BCM upgrade..." | tee -a /var/log/OpenLGTV_BCM.log
+	    sqf_file_count=`ls -al $OpenLGTV_BCM_USB/upgrade/OpenLGTV_BCM-v*.sqf | wc -l`
 	    if [ "$sqf_file_count" -gt 1 ]
 	    then
-		echo "OpenLGTV_BCM-ERROR: theres too much OpenLGTV BCM upgrade (.sqf) files in /mnt/usb1/Drive1/OpenLGTV_BCM/upgrade/, refusing to autoupgrade" | tee -a /var/log/OpenLGTV_BCM.log
+		echo "OpenLGTV_BCM-ERROR: theres too much OpenLGTV BCM upgrade (.sqf) files in $OpenLGTV_BCM_USB/upgrade/, refusing to autoupgrade" | tee -a /var/log/OpenLGTV_BCM.log
 	    else
-		/scripts/install.sh /mnt/usb1/Drive1/OpenLGTV_BCM/upgrade/OpenLGTV_BCM-v*.sqf autoupgrade 2>&1 | tee -a /var/log/OpenLGTV_BCM.log
+		/scripts/install.sh $OpenLGTV_BCM_USB/upgrade/OpenLGTV_BCM-v*.sqf autoupgrade 2>&1 | tee -a /var/log/OpenLGTV_BCM.log
 		#exit $?
 	    fi
         #fi
     fi
-    if [ -f "/mnt/usb1/Drive1/OpenLGTV_BCM/make_backup" ]
+    if [ -f "$OpenLGTV_BCM_USB/make_backup" ]
     then
-        echo "OpenLGTV_BCM-INFO: found /mnt/usb1/Drive1/OpenLGTV_BCM/make_backup file, starting backup to USB storage device..." | tee -a /var/log/OpenLGTV_BCM.log
-        /scripts/backup.sh /mnt/usb1/Drive1/OpenLGTV_BCM/backup 2>&1 | tee -a /var/log/OpenLGTV_BCM.log
-        rm -f /mnt/usb1/Drive1/OpenLGTV_BCM/make_backup
+        echo "OpenLGTV_BCM-INFO: found $OpenLGTV_BCM_USB/make_backup file, starting backup to USB storage device..." | tee -a /var/log/OpenLGTV_BCM.log
+        /scripts/backup.sh $OpenLGTV_BCM_USB/backup 2>&1 | tee -a /var/log/OpenLGTV_BCM.log
+        rm -f $OpenLGTV_BCM_USB/make_backup
     fi
-    if [ -d "/mnt/usb1/Drive1/OpenLGTV_BCM/ywedata" -o -d "/mnt/usb1/Drive1/OpenLGTV_BCM/ywe" ]
+    if [ -d "$OpenLGTV_BCM_USB/ywedata" -o -d "$OpenLGTV_BCM_USB/ywe" ]
     then
-        echo "OpenLGTV_BCM-INFO: found at ywe or ywedata dirs in /mnt/usb1/Drive1/OpenLGTV_BCM/ - executing Yahoo Widgets configs setup again" | tee -a /var/log/OpenLGTV_BCM.log
+        echo "OpenLGTV_BCM-INFO: found at ywe or ywedata dirs in $OpenLGTV_BCM_USB/ - executing Yahoo Widgets configs setup again" | tee -a /var/log/OpenLGTV_BCM.log
         #umount /mnt/widget.data
-        #mount --bind /mnt/usb1/Drive1/OpenLGTV_BCM/ywedata /mnt/widget.data
+        #mount --bind $OpenLGTV_BCM_USB/ywedata /mnt/widget.data
         #export ywe_usb_ywe_lg=1
         #export ywedata_usb_widget_data=1
         source /etc/rc.d/rc.ywe
     fi
-    if [ -d "/mnt/usb1/Drive1/OpenLGTV_BCM/autorun" ]
+    if [ -d "$OpenLGTV_BCM_USB/autorun" ]
     then
-        echo "OpenLGTV_BCM-INFO: executing custom autorun scripts from /mnt/usb1/Drive1/OpenLGTV_BCM/autorun/" | tee -a /var/log/OpenLGTV_BCM.log
-	for scr_autorun in /mnt/usb1/Drive1/OpenLGTV_BCM/autorun/*
+        echo "OpenLGTV_BCM-INFO: executing custom autorun scripts from $OpenLGTV_BCM_USB/autorun/" | tee -a /var/log/OpenLGTV_BCM.log
+	for scr_autorun in $OpenLGTV_BCM_USB/autorun/*
 	do
 	    echo "OpenLGTV_BCM-INFO: executing $scr_file ..." | tee -a /var/log/OpenLGTV_BCM.log
 	    $scr_autorun
